# PPOIS

lab1/: lab1.cpp  long_int.cpp  long_int.h  long_int_tests.cpp
lab2/: Address.cpp  Address.h  Bag.cpp  Bag.h  Client.cpp  Client.h  Coordinates.cpp  Coordinates.h  Courier.cpp  Courier.h  Date.cpp  Date.h  Discount.cpp  Discount.h  Dish.cpp  Dish.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Order.cpp  Order.h  Organisation.cpp  Organisation.h  Person.cpp  Person.h  Restaurant.cpp  Restaurant.h  Review.cpp  Review.h  Schedule.cpp  Schedule.h  Transport.cpp  Transport.h  delivery_tests.cpp
sem4/RR/Agent/: CMakeLists.txt  searchNumberOfConnectedComponentsModule.cpp  searchNumberOfConnectedComponentsModule.hpp
sem4/RR/Agent/agent/: SearchNumberOfConnectedComponentsAgent.cpp  SearchNumberOfConnectedComponentsAgent.hpp
sem4/RR/Agent/keynodes/: create_keynodes.hpp
sem4/lab1/: Cartridge.py  Driver.py  Ink.py  Maintenance.py  Page.py  Paper.py  PrintDocument.py  Printer.py  README.md  common_functions.py  functions.py  main.py  tests.py
sem4/lab2/: README.md  controller.py  main.py  model.py  records_handler.py  view.py
